# llm-therapist

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  t.ipynb
data/: queries.sql
notebooks/: explore_results.ipynb  reddit.ipynb
scripts/: setup_database.py
src/: config.py  database.py  database_cloud_sql.py  llm_interface.py  pipeline.py  reddit_scraper.py  text_analyzer.py
